# libgame

./: .gitmodules  CMakeLists.txt  README.txt  TODO  atest.c  bitcoin.sh
002/29f/: SHA256E-s173238270--753d84981e927732b664e0fcac93a7c97e2d87c54af9771e74be8841cb41465d.a.log.cnk  SHA256E-s173238270-S65011712-C1--753d84981e927732b664e0fcac93a7c97e2d87c54af9771e74be8841cb41465d.a.log.web  SHA256E-s173238270-S65011712-C2--753d84981e927732b664e0fcac93a7c97e2d87c54af9771e74be8841cb41465d.a.log.web  SHA256E-s173238270-S65011712-C3--753d84981e927732b664e0fcac93a7c97e2d87c54af9771e74be8841cb41465d.a.log.web
040/9e0/: SHA256E-s29798142--365a7a072808ae67cf73cade5a8ebea6aabdf7bda5607b118452f878795606a1.a.log.cnk  SHA256E-s29798142-S65011712-C1--365a7a072808ae67cf73cade5a8ebea6aabdf7bda5607b118452f878795606a1.a.log.web
0a1/ff9/: SHA256E-s38163562--0503a00bdd91558c0955e6c8ca0658bca00273c9ab56c99a01f45d950f6285dc.a.log.cnk  SHA256E-s38163562-S65011712-C1--0503a00bdd91558c0955e6c8ca0658bca00273c9ab56c99a01f45d950f6285dc.a.log.web
0ec/eba/: SHA256E-s19421364--b8f07d7472b88aecfaa6e620f1fa80335ff97164ba48b7f2d8b3401a23dc6aa9.a.log.web
0f4/b52/: SHA256E-s3026368--1604aa83062f76c5ad18e4f5887dca455ebcbbdd08f535aafeb8f7c6bb6405e6.log.cnk  SHA256E-s3026368-S65011712-C1--1604aa83062f76c5ad18e4f5887dca455ebcbbdd08f535aafeb8f7c6bb6405e6.log.web
10d/a35/: SHA256E-s36929460--5ce35633033c6e746dcbd599fb72da8b5500f96b75c672a64f7ac93531970947.a.log.cnk  SHA256E-s36929460-S65011712-C1--5ce35633033c6e746dcbd599fb72da8b5500f96b75c672a64f7ac93531970947.a.log.web
156/0a3/: SHA256E-s173238158--790b181ca66c559b5f37eba3dea4ca8f43bbc8f2a0df3856a920a8cc96f61846.a.log.cnk  SHA256E-s173238158-S65011712-C1--790b181ca66c559b5f37eba3dea4ca8f43bbc8f2a0df3856a920a8cc96f61846.a.log.web  SHA256E-s173238158-S65011712-C2--790b181ca66c559b5f37eba3dea4ca8f43bbc8f2a0df3856a920a8cc96f61846.a.log.web  SHA256E-s173238158-S65011712-C3--790b181ca66c559b5f37eba3dea4ca8f43bbc8f2a0df3856a920a8cc96f61846.a.log.web
165/72a/: SHA256E-s12421512--a5bdbb36f233ca66a73e31fcbf01991f58e2b305ee7ae4df2c25d89ccdaaf46e.2.2.log.cnk  SHA256E-s12421512-S65011712-C1--a5bdbb36f233ca66a73e31fcbf01991f58e2b305ee7ae4df2c25d89ccdaaf46e.2.2.log.web
166/01c/: SHA256E-s315420224--b3e1d81f553e9ddc691cc6b693223a7d75c1d49ecd9bbb91c158b71b20af6b79.0.0.log.cnk  SHA256E-s315420224-S65011712-C1--b3e1d81f553e9ddc691cc6b693223a7d75c1d49ecd9bbb91c158b71b20af6b79.0.0.log.web  SHA256E-s315420224-S65011712-C2--b3e1d81f553e9ddc691cc6b693223a7d75c1d49ecd9bbb91c158b71b20af6b79.0.0.log.web  SHA256E-s315420224-S65011712-C3--b3e1d81f553e9ddc691cc6b693223a7d75c1d49ecd9bbb91c158b71b20af6b79.0.0.log.web  SHA256E-s315420224-S65011712-C4--b3e1d81f553e9ddc691cc6b693223a7d75c1d49ecd9bbb91c158b71b20af6b79.0.0.log.web  SHA256E-s315420224-S65011712-C5--b3e1d81f553e9ddc691cc6b693223a7d75c1d49ecd9bbb91c158b71b20af6b79.0.0.log.web
199/8e6/: SHA256E-s47746872--7116a98a15511fdb7899317914faaa2943119afc74e87d365da69da5c3d67361.a.log.web
1ea/a39/: SHA256E-s65172336--093f837edf76783629c8d7a43fe9a2461874d61c509acb4542cf9178a063ef65.0.0.log.cnk  SHA256E-s65172336-S65011712-C1--093f837edf76783629c8d7a43fe9a2461874d61c509acb4542cf9178a063ef65.0.0.log.web  SHA256E-s65172336-S65011712-C2--093f837edf76783629c8d7a43fe9a2461874d61c509acb4542cf9178a063ef65.0.0.log.web
1f4/f5f/: SHA256E-s176970320--75f952fe02a25dda9471db1fa1ca0e496f126cd862a8c92c2e22417444119a62.a.log.cnk  SHA256E-s176970320-S65011712-C1--75f952fe02a25dda9471db1fa1ca0e496f126cd862a8c92c2e22417444119a62.a.log.web  SHA256E-s176970320-S65011712-C2--75f952fe02a25dda9471db1fa1ca0e496f126cd862a8c92c2e22417444119a62.a.log.web  SHA256E-s176970320-S65011712-C3--75f952fe02a25dda9471db1fa1ca0e496f126cd862a8c92c2e22417444119a62.a.log.web
1fa/9ac/: SHA256E-s545924--fbe04b1337c2af6d3cd38182ada86af52ad42f89fa1d8c532628b9f6fce4e395.a.log.cnk  SHA256E-s545924-S65011712-C1--fbe04b1337c2af6d3cd38182ada86af52ad42f89fa1d8c532628b9f6fce4e395.a.log.web
22d/879/: SHA256E-s58315248--aea12fab979b7a2452b6e3899d670cc97301285bacaa88d6f6afc561ab312a03.0.0.log.cnk  SHA256E-s58315248-S65011712-C1--aea12fab979b7a2452b6e3899d670cc97301285bacaa88d6f6afc561ab312a03.0.0.log.web
24f/736/: SHA256E-s545924--73da726b9472b4d7934d28d7dd036c7c6622c502a31b27d5eeb74da004320529.a.log.cnk  SHA256E-s545924-S65011712-C1--73da726b9472b4d7934d28d7dd036c7c6622c502a31b27d5eeb74da004320529.a.log.web
2af/3f6/: SHA256E-s15229472--4f5bdf26a6f3c1dcf91bbd8114a0e24ed5a560511309b6d623db60d1f269b05c.0.0.log.cnk  SHA256E-s15229472-S65011712-C1--4f5bdf26a6f3c1dcf91bbd8114a0e24ed5a560511309b6d623db60d1f269b05c.0.0.log.web
2dc/f19/: SHA256E-s215670736--fd0491b9e576283927b61299a9cecd2aac7c5fe05ec0475dacdc8f01428c8402.a.log.cnk  SHA256E-s215670736-S65011712-C1--fd0491b9e576283927b61299a9cecd2aac7c5fe05ec0475dacdc8f01428c8402.a.log.web  (+3 more)
dependencies/: CMakeLists.txt
dependencies/prefix/: .gitignore
dependencies/prefix/Linux-3.10.0-1062.4.1.el7.x86_64/lib/: libbitcoin-client.so.0.0.0  libbitcoin-explorer.so.0.0.0  libbitcoin-network.so.0.0.0  libbitcoin-protocol.so.0.0.0  libbitcoin.so.0.0.0  libsecp256k1.so.0.0.0  libzmq.so.5.2.2
dependencies/prefix/Linux-5.4.0-29-generic/lib/: libbitcoin-client.so.0.0.0  libbitcoin-explorer.so.0  libbitcoin-explorer.so.0.0.0  libbitcoin-network.la  libbitcoin-network.so.0  libbitcoin-network.so.0.0.0  libbitcoin-protocol.la  libbitcoin-protocol.so.0  libbitcoin-protocol.so.0.0.0  libbitcoin.la  libbitcoin.so.0  libbitcoin.so.0.0.0  libzmq.so.5.2.2
dependencies/prefix/Linux-5.4.0-29-generic/lib/pkgconfig/: libbitcoin-client.pc  libbitcoin-explorer.pc  libbitcoin-network.pc  libbitcoin-protocol.pc  libbitcoin.pc  libzmq.pc
dependencies/prefix/include/: secp256k1.h  secp256k1_preallocated.h  secp256k1_recovery.h  zmq.h  zmq_utils.h
dependencies/prefix/include/bitcoin/: bitcoin  bitcoin.hpp  client  client.hpp  network  network.hpp  protocol  protocol.hpp  system  system.hpp
source/: game.c  game.cpp  libgame-ltfs.cpp  storage.cpp  storage_digests_openssl.cpp  storage_siaskynet.cpp  stream-down.cpp  stream-up.cpp
transition/: provider-2.hpp
(+135 files in other folders)
